fixes #1954 improved rerankOn
(existing) if vectorize was used in findAndRerank we use
that query as the query to rerank on, otherwise use rerankOn option

no matter what, when we get the node to rerank on if it is a value
node (text, number , etc) we get the text value of it.

if null or empty string or not defined we drop the doc and do not rerank

otherwise (present but array or object) we error